--- a/action_page.html
+++ b/action_page.html
@@ -18,9 +18,9 @@
     <h1>67</h1>
     <p>If you submitted the form, thank you. Here's a video:</p>
 
-    <!-- Replace the ID below with your YouTube video ID -->
+    
     <div class="video-container">
-      <iframe src="https://www.youtube.com/embed/L7ejl_Hj3A8" title="YouTube video" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/L7ejl_Hj3A8?autoplay=1&mute=1&rel=0" title="YouTube video" allow="accelerometer; autoplay; encrypted-media; clipboard-write; picture-in-picture" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 
     <p><a class="button" href="index.html">Back to survey</a></p>
