--- a/action_page.html
+++ b/action_page.html
@@ -20,7 +20,7 @@
 
     
     <div class="video-container">
-      <iframe src="https://www.youtube.com/embed/L7ejl_Hj3A8?autoplay=1&mute=1&rel=0" title="YouTube video" allow="accelerometer; autoplay; encrypted-media; clipboard-write; picture-in-picture" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/L7ejl_Hj3A8?autoplay=1&unmute=1&rel=0" title="YouTube video" allow="accelerometer; autoplay; encrypted-media; clipboard-write; picture-in-picture" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 
     <p><a class="button" href="index.html">Back to survey</a></p>
